--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "author": "kzk-maeda <kzk.maeda0711@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.12.10",
+    "@babel/preset-env": "^7.12.11",
+    "babel-loader": "^8.2.2",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0"
   },
