--- a/package.json
+++ b/package.json
@@ -8,11 +8,18 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-typescript": "^7.12.7",
+    "@types/jquery": "^3.5.5",
     "babel-loader": "^8.2.2",
+    "typescript": "^4.1.3",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0"
   },
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "lint:ts": "tsc --noEmit"
+  },
+  "dependencies": {
+    "jquery": "^3.5.1"
   }
 }
