--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
+    "@babel/preset-flow": "^7.12.1",
     "@babel/preset-typescript": "^7.12.7",
     "@types/jquery": "^3.5.5",
     "babel-loader": "^8.2.2",
