--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-flow": "^7.12.1",
     "@babel/preset-typescript": "^7.12.7",
+    "@types/jest": "^26.0.19",
     "@types/jquery": "^3.5.5",
     "babel-loader": "^8.2.2",
+    "jest": "^26.6.3",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "webpack": "^5.11.1",
     "webpack-cli": "^4.3.0"
   },
   "scripts": {
     "build": "webpack",
-    "lint:ts": "tsc --noEmit"
+    "lint:ts": "tsc --noEmit",
+    "test": "jest"
   },
   "dependencies": {
     "jquery": "^3.5.1"
