--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@types/jquery": "^3.5.5",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-transition-group": "^4.4.0",
     "babel-loader": "^8.2.2",
     "jest": "^26.6.3",
+    "react-transition-group": "^4.4.1",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "webpack": "^4.19.1",
