--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-transition-group": "^4.4.0",
+    "@types/styled-components": "^5.1.7",
     "babel-loader": "^8.2.2",
+    "babel-plugin-styled-components": "^1.12.0",
     "jest": "^26.6.3",
     "react-transition-group": "^4.4.1",
     "ts-jest": "^26.4.4",
@@ -35,6 +37,7 @@
   "dependencies": {
     "jquery": "^3.5.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.2.1"
   }
 }
